# bitcoinzk

./: .gitignore  Cargo.toml  Gemfile  README.md  _config.yml  build-risc0.sh  build-sp1.sh  build.sh  create-elf.sh
.github/workflows/: mdbook.yml
_posts/: 2024-04-23-welcome-to-jekyll.markdown
bitcoin/: Cargo.toml
bitcoin/src/: btc_block.rs  btc_block_json.rs  btc_blocks.rs  btc_blocks_wrapper.rs  constants.rs  curl.rs  error.rs  get_block_hashes.rs  get_blocks.rs  json_response.rs  lib.rs  utils.rs  write_blocks.rs
bitcoin/src/test_utils/: mod.rs
cli/: Cargo.toml
jolt/cli/: Cargo.toml
jolt/cli/src/: main.rs
jolt/guest/: Cargo.toml
jolt/guest/src/: lib.rs
lc/: Cargo.toml
lc/src/: lib.rs
mdbook/src/: SUMMARY.md  Welcome  bitcoinZ.md
program/: Cargo.toml  README.md  create-elf.sh
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: btc_blocks_wrapper.rs  btc_submission_material.rs  error.rs  main.rs
risc0/cli/: Cargo.toml  README.md
risc0/cli/src/: main.rs
risc0/methods/: Cargo.toml
risc0/methods/program/: Cargo.toml  README.md
risc0/methods/program/src/: main.rs
script/: Cargo.toml  README.md  btc-block.json  input.json  proof-with-io.json
script/src/: btc_block.rs  btc_blocks.rs  cli.rs  constants.rs  curl.rs  error.rs  get_block_hashes.rs  get_blocks.rs  main.rs  write_blocks.rs
sp1/cli/: Cargo.toml
sp1/cli/src/: main.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
vanilla/: Cargo.toml
vanilla/src/: main.rs  vanilla_prover.rs
