[workspace]
[package]
version = "0.1.0"
name = "temp-program"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31.1", features = [ "serde" ] }
derive-getters = "0.3.0"
derive_more = "0.99.17"
hex = "0.4.3"
serde = "1.0.197"
serde_json = "1.0.114"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
thiserror = "1.0.58"
