[package]
edition = "2021"
version = "0.1.0"
name = "bitcoinz-program"

[dependencies]
hex = "0.4.3"
serde = "1.0.197"
thiserror = "1.0.58"
serde_json = "1.0.114"
derive_more = "0.99.17"
derive-getters = "0.3.0"
bitcoin = { version = "0.31.1", features = [ "serde" ] }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
