[package]
version = "0.1.0"
name = "bitcoinz-script"
edition = "2021"

[dependencies]
clap = "4.5.2"
hex = "0.4.3"
log = "0.4.21"
serde = "1.0.197"
thiserror = "1.0.58"
serde_json = "1.0.114"
derive_more = "0.99.17"
derive-getters = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = [ "full"] }
bitcoin = { version = "0.31.1", features = [ "serde" ] }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
futures = "0.3.30"
