[package]
name = "bitcoinz-jolt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["std"] }
bitcoin = { path = "../../bitcoin" }
clap = { version = "4.5.2", features = ["derive"]}
cli = { package="bitcoinz-cli", path="../../cli" }
guest = { path = "../guest" }
tokio = { version = "1.36.0", features = [ "full"] }
