[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
bitcoin = { path = "../../bitcoin" }
lc = { package = "bitcoinz-lc", path = "../../lc" }
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
